src/V3/README.md
A version with extra features and options.

Build:
 *  Pico 2
 *  CPU Speed: 240Mhz
 *  Optimize: -O3
 *  USB Stack: No USB
 *  Flash Size: 4MB (No FS)

Some history
 *  0.7.255 fixed bug in auto mode
 *  0.8.255 fixed bug in spectrum dynamic range
 *  0.9.255 fixed sidetone level
 *  0.9.255 fixed CW RX noise
 *  0.9.255 fixed AGC TX/RX transition
 *  0.9.255 remove experimental CWL and CWU
 *  0.9.255 LCW and UCW become CWL and CWU
 *  0.9.225 CW Speed, sidetone frequency, and level
 *  1.0.225 save/restore CW settings to EEPROM
 *  1.0.225 general code cleanup
 *  1.1.225 add spectrum type (wind or grass)
 *  1.1.225 add IF shift
 *  1.1.225 CW transition to receive mute
 *  1.2.225 add AM mode
 *  1.2.225 add noise reduction
 *  1.3.225 show CW settings
 *  1.4.225 move filter code to filters.h
 *  2.0.225 add AMN and AMW (RX only) modes
 *  2.1.225 fix issue with noise on AMN
 *  2.2.225 move IRQ to SRAM fixes DSP issues
 *  2.3.225 add AML and AMU modes (TX in AM, RX in SSB)
 *  2.4.225 general coverage receive mode
 *  2.5.225 improve AM and CW filtering
 *  2.6.225 fix bug in CW overloading
 *  2.7.225 move extra gain to AGC
 *  3.0.225 move all DSP to floating point
 *  3.1.225 improved smeter
 *  3.2.225 mic gain options
 *  4.0.225 implement CESSB
 *  4.1.225 display CESSB and mic gain
 *  4.2.225 fix SWR and power measurement
 *  4.2.240 consistent with other projects
 *  4.3.240 set correct TCXO frequency
 *  4.4.240 CW paddle improvements
 *  4.5.240 spectrum gain and smeter update
 *  4.6.240 use modified TFT_eSPI2 library
 *  4.7.240 enhance RX/TX audio

